0926 포트폴리오 초안

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         </section>
     </section>
     <!-- footer -->
-    <footer data-aos="fade-up" id="contact">
+    <footer id="contact">
         <h3>CONTACT</h3>
         <p>LET'S GET IN TOUCH</p>
         <span>▼</span>
