0927 포트폴리오

--- a/index.html
+++ b/index.html
@@ -210,10 +210,7 @@
         <h3>CONTACT</h3>
         <p>LET'S GET IN TOUCH</p>
         <span>▼</span>
-        <div class="mail">
-            <img src="img/ico_mail.png" alt="email">
-            <a href="mailto:yhb7246@gmail.com">yhb7246@gmail.com</a>
-        </div>
+        <a href="mailto:yhb7246@gmail.com" class="mail">yhb7246@gmail.com</a>
         <em>Copyright ⓒ YoonHyunbeen All rights reserved.</em>
     </footer>
 
