0927 포트폴리오

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li><a href="#about">ABOUT</a></li>
             <li class="project"><a href="#project">PROJECT</a>
                 <ul class="depth">
-                    <li><a href="#contwrap_web">WEB</a></li>
+                    <li><a href="#project">WEB</a></li>
                     <li><a href="#contwrap_design">DESIGN</a></li>
                 </ul>
             </li>
@@ -92,10 +92,10 @@
                     <h4 class="title">YOUNHYUNMALL</h4>
                     <p>윤현몰을 클론코딩한 PC버전 웹사이트입니다.</p>
                     <span>작업기여도 <strong>100%</strong></span>
-                    <span>#JS #SWIPER #PULLDOWNMENU #TAB #SCROLLTRIGGER</span>
+                    <span>#JS  #SWIPER  #PULLDOWNMENU  #TAB  #SCROLLTRIGGER</span>
                     <div class="btnarea">
                         <button><a href="younhyunmall/index.html" target="_blank">프로젝트 바로가기</a></button>
-                        <button><a href="younhyunmall/index.html" target="_blank">Github</a></button>
+                        <button><a href="https://github.com/Yoonhyunbeen/younhyunmall.git" target="_blank">Github</a></button>
                     </div>
                 </div>
             </div>
@@ -108,7 +108,7 @@
                     <h4 class="title">JOSUN HOTELS & RESORTS</h4>
                     <p>조선호텔앤리조트 사이트를 클론코딩한 PC버전 웹사이트입니다.</p>
                     <span>작업기여도 <strong>100%</strong></span>
-                    <span>#JS #SWIPER #PULLDOWNMENU #TAB #SCROLLTRIGGER</span>
+                    <span>#JS  #SWIPER  #PULLDOWNMENU  #TAB #SCROLLTRIGGER</span>
                     <div class="btnarea">
                         <button><a href="#" target="_blank">프로젝트 바로가기</a></button>
                         <button><a href="#" target="_blank">Github</a></button>
@@ -124,7 +124,7 @@
                     <h4 class="title">NATIONAL FOLK MUSEUM OF KOREA</h4>
                     <p>국립민속박물관 사이트를 클론코딩한 반응형 웹사이트입니다.</p>
                     <span>작업기여도 <strong>100%</strong></span>
-                    <span>#RESPONSIVE #JS #SWIPER #PULLDOWNMENU #TAB #SCROLLTRIGGER</span>
+                    <span>#RESPONSIVE  #JS  #SWIPER #PULLDOWNMENU  #TAB  #SCROLLTRIGGER</span>
                     <div class="btnarea">
                         <button><a href="#" target="_blank">프로젝트 바로가기</a></button>
                         <button><a href="#" target="_blank">Github</a></button>
@@ -139,10 +139,10 @@
                     <h4 class="title">CULTURE WEBZINE: READY</h4>
                     <p>컬처웹진 'READY'를 기획 및 디자인, 제작했습니다. <br>PC버전 웹사이트입니다.</p>
                     <span>작업기여도 <strong>100%</strong></span>
-                    <span>#USABILITY #SWIPER #DESIGN #HTML</span>
+                    <span>#USABILITY  #SWIPER  #DESIGN  #HTML</span>
                     <div class="btnarea">
                         <button><a href="ready/index.html" target="_blank">프로젝트 바로가기</a></button>
-                        <button><a href="#" target="_blank">Github</a></button>
+                        <button><a href="https://github.com/Yoonhyunbeen/ready.git" target="_blank">Github</a></button>
                     </div>
                 </div>
                 
@@ -161,7 +161,7 @@
                 </div>
                 <div class="btnarea">
                     <button><a href="muse/muse_project.pdf" target="_blank">기획서</a></button>
-                    <button><a href="muse/muse_design_all.png" target="_blank">프로젝트 바로가기</a></button>
+                    <button><a href="muse/index.html" target="_blank">프로젝트 바로가기</a></button>
 
                 </div>
             </div>
