--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <h1>안녕하세요, 웹디자이너 · 퍼블리셔 윤현빈입니다.</h1>
             </li>
             <li>
-                <p>시각적인 아름다움과 기능적 효율성을 동시에 고려한 웹사이트를 제작합니다. 또한, 사용자 경험을 최우선으로 웹 접근성, 웹 표준을 준수하여 차별이 없는 웹을 지향합니다. </p>
+                <p>시각적인 아름다움과 기능적 효율성을 동시에 고려한 웹사이트를 제작합니다. </p>
                 <br>
                 <p>최신 웹 트렌드와 표준을 반영하여, 감각적이면서도 접근성이 뛰어난 웹페이지를 구현하는 데 열정을 가지고 있습니다.</p>
             </li>
@@ -117,10 +117,10 @@
                         <a href="josunhotels/sub02_membership.html" target="_blank">멤버십</a>
                         <a href="josunhotels/sub03_login.html" target="_blank">로그인</a></strong>
                     <span>작업기여도 <strong>100%</strong></span>
-                    <span>#JS #SWIPER #PULLDOWNMENU #TAB #ONEPAGESCROLL</span>
+                    <span>#JS #JQUERY #SWIPER #PULLDOWNMENU #TAB #ONEPAGESCROLL</span>
                     <div class="btnarea">
-                        <button><a href="#" target="_blank">프로젝트 바로가기</a></button>
-                        <button><a href="#" target="_blank">Github</a></button>
+                        <button><a href="https://yoonhyunbeen.github.io/josunhotels/" target="_blank">프로젝트 바로가기</a></button>
+                        <button><a href="https://github.com/Yoonhyunbeen/josunhotels.git" target="_blank">Github</a></button>
                     </div>
                 </div>
 
