1009 포트폴리오 백업

--- a/index.html
+++ b/index.html
@@ -127,17 +127,17 @@
             </div>
             <div class="content">
                 <div class="imgarea">
-                    <a href="#" target="_blank"><img src="img/web01.PNG" alt=""></a>
+                    <a href="#" target="_blank"><img src="img/web03.png" alt=""></a>
                 </div>
                 <div class="text">
                     <h4 class="title">NATIONAL FOLK MUSEUM OF KOREA</h4>
                     <p>국립민속박물관 사이트를 클론코딩한 반응형 웹사이트입니다.</p>
-                    <strong class="page"><a href="josunhotels/index.html" target="_blank">메인</a>
-                        <a href="josunhotels/sub01_josunpalace.html" target="_blank">조선팰리스</a>
-                        <a href="#" target="_blank">멤버십</a>
-                        <a href="#" target="_blank">로그인</a></strong>
+                    <strong class="page"><a href="nationalfolkmuseum/index.html" target="_blank">메인</a>
+                        <a href="nationalfolkmuseum/sub01_info.html" target="_blank">관람안내 &middot; 예약</a>
+                        <a href="nationalfolkmuseum/sub02_exhibition.html" target="_blank">전시</a>
+                        <a href="nationalfolkmuseum/sub03_event.html" target="_blank">교육 &middot; 행사</a></strong>
                     <span>작업기여도 <strong>100%</strong></span>
-                    <span>#RESPONSIVE #JS #SWIPER #PULLDOWNMENU #TAB #SCROLLTRIGGER</span>
+                    <span>#RESPONSIVE #JS #SWIPER #PULLDOWNMENU #TAB </span>
                     <div class="btnarea">
                         <button><a href="#" target="_blank">프로젝트 바로가기</a></button>
                         <button><a href="#" target="_blank">Github</a></button>
