--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel='stylesheet' href='//cdn.jsdelivr.net/font-kopub/1.0/kopubdotum.css'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
@@ -52,7 +53,7 @@
     </section>
     <!-- about -->
     <section data-aos="fade-up" id="about">
-        <figure><img src="img/profile01.jpg" alt=""></figure>
+        <figure><img src="img/profile00.png" alt=""></figure>
         <ul>
             <li>
                 <h3>ABOUT</h3>
@@ -61,9 +62,10 @@
                 <h1>안녕하세요, 웹디자이너 · 퍼블리셔 윤현빈입니다.</h1>
             </li>
             <li>
-                <p>시각적인 아름다움과 기능적 효율성을 동시에 고려한 웹사이트를 제작합니다. </p>
+                <p class="bold">끊임없는 성장과 도전으로, 
+                    <br>시각적인 아름다움과 기능적 효율성을 동시에 고려한 웹사이트를 제작합니다. </p>
                 <br>
-                <p>최신 웹 트렌드와 표준을 반영하여, 감각적이면서도 접근성이 뛰어난 웹페이지를 구현하는 데 열정을 가지고 있습니다.</p>
+                <p>인터넷 쇼핑몰을 운영하는 빈티지샵에서 아르바이트 당시, cafe24를 통해 웹디자인을 접하게 됐습니다. 이어 엠비씨컴퓨터아카데미에서 웹디자인 &middot; 웹퍼블리싱에 관한 이론 및 실무지식을 익혔으며, 이를 바탕으로 최신 웹 트렌드와 표준을 반영하여 감각적이면서도 접근성이 뛰어난 웹페이지를 구현하고자 합니다.</p>
             </li>
             <li>
                 <span>#HTML</span>
@@ -86,19 +88,19 @@
             <h3>WEB PORTFOLIO</h3>
             <div class="content">
                 <div class="imgarea">
-                    <a href="#" target="_blank"><img src="img/web01.PNG" alt=""></a>
+                    <a href="https://yoonhyunbeen.github.io/younhyunmall/" target="_blank"><img src="img/web01.PNG" alt=""></a>
                 </div>
                 <div class="text">
                     <h4 class="title">YOUNHYUNMALL</h4>
                     <p>윤현몰을 클론코딩한 PC버전 웹사이트입니다.</p>
-                    <strong class="page"><a href="younhyunmall/index.html" target="_blank">메인</a> 
-                        <a href="younhyunmall/sub01.html" target="_blank">타일</a>  
-                        <a href="younhyunmall/sub02.html" target="_blank">빅슬랩</a> 
-                        <a href="younhyunmall/sub03_login.html" target="_blank">로그인</a></strong>
+                    <strong class="page"><a href="https://yoonhyunbeen.github.io/younhyunmall/" target="_blank">메인</a> 
+                        <a href="https://yoonhyunbeen.github.io/younhyunmall/sub01.html" target="_blank">타일</a>  
+                        <a href="https://yoonhyunbeen.github.io/younhyunmall/sub02.html" target="_blank">빅슬랩</a> 
+                        <a href="https://yoonhyunbeen.github.io/younhyunmall/sub03_login.html" target="_blank">로그인</a></strong>
                     <span>작업기여도 <strong>100%</strong></span>
                     <span>#JS #SWIPER #PULLDOWNMENU #TAB #SCROLLTRIGGER</span>
                     <div class="btnarea">
-                        <button><a href="younhyunmall/index.html" target="_blank">프로젝트 바로가기</a></button>
+                        <button><a href="https://yoonhyunbeen.github.io/younhyunmall/" target="_blank">프로젝트 바로가기</a></button>
                         <button><a href="https://github.com/Yoonhyunbeen/younhyunmall.git"
                                 target="_blank">Github</a></button>
                     </div>
@@ -107,17 +109,17 @@
 
             <div class="content right">
                 <div class="imgarea">
-                    <a href="#" target="_blank"><img src="img/web02.PNG" alt=""></a>
+                    <a href="https://yoonhyunbeen.github.io/josunhotels/" target="_blank"><img src="img/web02.PNG" alt=""></a>
                 </div>
                 <div class="text">
                     <h4 class="title">JOSUN HOTELS & RESORTS</h4>
                     <p>조선호텔앤리조트 사이트를 클론코딩한 PC버전 웹사이트입니다.</p>
-                    <strong class="page"><a href="josunhotels/index.html" target="_blank">메인</a>
-                        <a href="josunhotels/sub01_josunpalace.html" target="_blank">조선팰리스</a>
-                        <a href="josunhotels/sub02_membership.html" target="_blank">멤버십</a>
-                        <a href="josunhotels/sub03_login.html" target="_blank">로그인</a></strong>
+                    <strong class="page"><a href="https://yoonhyunbeen.github.io/josunhotels/" target="_blank">메인</a>
+                        <a href="https://yoonhyunbeen.github.io/josunhotels/sub01_josunpalace.html" target="_blank">조선팰리스</a>
+                        <a href="https://yoonhyunbeen.github.io/josunhotels/sub02_membership.html" target="_blank">멤버십</a>
+                        <a href="https://yoonhyunbeen.github.io/josunhotels/sub03_login.html" target="_blank">로그인</a></strong>
                     <span>작업기여도 <strong>100%</strong></span>
-                    <span>#JS #JQUERY #SWIPER #PULLDOWNMENU #TAB #ONEPAGESCROLL</span>
+                    <span>#JS #JQUERY #SWIPER #FULLMENU #TAB #PARALLAXSCROLLING</span>
                     <div class="btnarea">
                         <button><a href="https://yoonhyunbeen.github.io/josunhotels/" target="_blank">프로젝트 바로가기</a></button>
                         <button><a href="https://github.com/Yoonhyunbeen/josunhotels.git" target="_blank">Github</a></button>
@@ -127,26 +129,24 @@
             </div>
             <div class="content">
                 <div class="imgarea">
-                    <a href="#" target="_blank"><img src="img/web03.png" alt=""></a>
+                    <a href="https://yoonhyunbeen.github.io/nationalfolkmuseum/" target="_blank"><img src="img/web03.png" alt=""></a>
                 </div>
                 <div class="text">
                     <h4 class="title">NATIONAL FOLK MUSEUM OF KOREA</h4>
                     <p>국립민속박물관 사이트를 클론코딩한 반응형 웹사이트입니다.</p>
-                    <strong class="page"><a href="nationalfolkmuseum/index.html" target="_blank">메인</a>
-                        <a href="nationalfolkmuseum/sub01_info.html" target="_blank">관람안내 &middot; 예약</a>
-                        <a href="nationalfolkmuseum/sub02_exhibition.html" target="_blank">전시</a>
-                        <a href="nationalfolkmuseum/sub03_event.html" target="_blank">교육 &middot; 행사</a></strong>
+                    <strong class="page"><a href="https://yoonhyunbeen.github.io/nationalfolkmuseum/" target="_blank">메인</a>
+                        <a href="https://yoonhyunbeen.github.io/nationalfolkmuseum/sub01_info.html" target="_blank">관람안내 &middot; 예약</a></strong>
                     <span>작업기여도 <strong>100%</strong></span>
-                    <span>#RESPONSIVE #JS #SWIPER #PULLDOWNMENU #TAB </span>
+                    <span>#RESPONSIVE #JS #JQUERY #SWIPER #PULLDOWNMENU #TAB #ACCORDIONMENU</span>
                     <div class="btnarea">
-                        <button><a href="#" target="_blank">프로젝트 바로가기</a></button>
-                        <button><a href="#" target="_blank">Github</a></button>
+                        <button><a href="https://yoonhyunbeen.github.io/nationalfolkmuseum/" target="_blank">프로젝트 바로가기</a></button>
+                        <button><a href="https://github.com/Yoonhyunbeen/nationalfolkmuseum.git" target="_blank">Github</a></button>
                     </div>
                 </div>
             </div>
             <div class="content right">
                 <div class="imgarea">
-                    <a href="ready/index.html" target="_blank"><img src="img/web04.PNG" alt=""></a>
+                    <a href="https://yoonhyunbeen.github.io/ready/" target="_blank"><img src="img/web04.PNG" alt=""></a>
                 </div>
                 <div class="text">
                     <h4 class="title">CULTURE WEBZINE: READY</h4>
@@ -154,7 +154,7 @@
                     <span>작업기여도 <strong>100%</strong></span>
                     <span>#USABILITY #SWIPER #DESIGN #HTML</span>
                     <div class="btnarea">
-                        <button><a href="ready/index.html" target="_blank">프로젝트 바로가기</a></button>
+                        <button><a href="https://yoonhyunbeen.github.io/ready/" target="_blank">프로젝트 바로가기</a></button>
                         <button><a href="https://github.com/Yoonhyunbeen/ready.git" target="_blank">Github</a></button>
                     </div>
                 </div>
